--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -36,7 +36,7 @@ jobs:
           source config.sh || { echo "Error: Failed to source config.sh"; exit 1; }
           cd work || { echo "Error: Failed to change directory to work"; exit 1; }
           . build/envsetup.sh || { echo "Error: Failed to source build/envsetup.sh"; exit 1; }
-          lunch $TYPE$SYM$DEVICE-eng || { echo "Error: Failed to lunch the target"; exit 1; }
+          lunch twrp_a24-eng || { echo "Error: Failed to lunch the target"; exit 1; }
           export ALLOW_MISSING_DEPENDENCIES=true
           mka recoveryimg -j4 || { echo "Error: Failed to build the target"; exit 1; }
 
