--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -27,8 +27,9 @@ jobs:
           mkdir -p work || { echo "Error: Failed to create work directory"; exit 1; }
           cd work || { echo "Error: Failed to change directory to work"; exit 1; }
           repo init -u $MANIFEST -b $BRANCH --depth=1 || { echo "Error: Failed to initialize repo"; exit 1; }
-          repo sync -c -j$(nproc) --force-sync --no-clone-bundle --no-tags || { echo "Error: Failed to sync repo"; exit 1; }
-          git clone $DT_LINK -b $DT_BRANCH device/$VENDOR/$DEVICE || { echo "Error: Failed to clone device tree"; exit 1; }
+          repo sync -c -j1 --force-sync --no-clone-bundle --no-tags || { echo "Error: Failed to sync repo"; exit 1; }
+          git clone --depth 1 $DT_LINK -b $DT_BRANCH device/$VENDOR/$DEVICE || { echo "Error: Failed to clone device tree"; exit 1; }
+          rm -rf .git # Remove .git directory to save space
 
       - name: Build Recovery
         run: |
@@ -42,7 +43,7 @@ jobs:
       - name: Compress Recovery Image
         run: |
           cd work || { echo "Error: Failed to change directory to work"; exit 1; }
-          zip -r recovery.zip recovery.img || { echo "Error: Failed to compress recovery image"; exit 1; }
+          zip -r9 recovery.zip recovery.img || { echo "Error: Failed to compress recovery image"; exit 1; } # Use maximum compression level
 
       - name: Release Recovery
         uses: softprops/action-gh-release@v1
