--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Cleanup Build Artifacts
         run: |
           cd work || { echo "Error: Failed to change directory to work"; exit 1; }
-          make clean || { echo "Error: Failed to clean build artifacts"; exit 1; }
+          build/soong/soong_ui.bash --make-mode
+
 
       - name: Build Recovery
         run: |
